scss/partials/_activity_card.scss
div.activity-card {
  width: 388px;
  float: left;
  background-color: white;
  border-radius: 6px;
  margin: 12px;
  position: relative;

  &:nth-child(even) {
    margin: 12px 0px 12px 12px;
  }

  &:nth-child(odd) {
    margin: 12px 12px 12px 0px;
  }

  @include mobile() {
    width: 100%;
    margin: 12px 0px;
  }

  &:hover, &.dropdown-active {
    @include big_web() {
      div.activity-card-shadow-container {
        box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
      }

      div.activity-card-head.entry-card {
        background-color: $carrot_light_gray_5;
      }

      div.activity-card-head div.activity-card-head-right {
        div.activity-tag {
          background-color: $carrot_light_gray_6;
        }
      }

      div.activity-card-footer {
        button.post-edit {
          opacity: 0.8;
        }

        div.activity-share {
          button.activity-share-bt {
            opacity: 1;
          }
        }
      }
    }
  }

  &.activity-card-placeholder {
    background-color: transparent;
    box-shadow: none;
    border: none;
  }

  &.empty-state {
    border: none;
    box-shadow: none;
    background-color: transparent;
    margin-top: 20px;
    flex: 1;
    text-align: center;
    width: 100%;

    div.empty-state-content {
      height: 160px;
      position: relative;
      top: 50%;
      margin-top: -80px;

      @include mobile() {
        display: none;
      }

      img {
        width: 168px;
        height: 120px;
      }

      div.activity-card-title {
        font-size: 14px;
        color: $carrot_light_gray;
        @include avenir_H();
        margin-top: 20px;
        text-align: center;

        button {
          color: $carrot_text_blue;
          padding: 0;
          margin: 0;

          &:hover, &:avtive, &:focus {
            border: none;
            outline: none;
            text-decoration: underline;
          }
        }
      }
    }
  }

  div.activity-card-breadcrumb {
    @include avenir_R();
    font-size: 14px;
    color: $oc_gray_7;
    padding: 24px;
    background-color: $carrot_light_gray_2;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
  }

  div.activity-card-head {
    width: 100%;
    padding: 20px 24px;
    height: 72px;
    display: flex;
    background-color: $light_tan;
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;

    div.activity-card-head-author {
      padding-right: 20px;
      flex: 1;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      @include activity-author(32);
    }

    $right_max_width: 260;
    div.activity-card-head-right {
      white-space: nowrap;
      max-width: #{$right_max_width}px;

      @include new-tag();

      @include section-tag($right_max_width);
    }
  }

  div.activity-card-shadow-container {
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;

    @include mobile() {
      box-shadow: none;
    }
  }

  div.activity-card-content {
    width: 100%;
    padding: 32px 32px 0px;

    div.activity-card-headline {
      @include activity-title();
      @include avenir_H();
      font-size: 20px;
      line-height: 28px;
      color: $deep_navy;
      text-overflow: ellipsis;
      width: 100%;
      overflow: hidden;
      white-space: nowrap;
      max-height: 31px;

      @include mobile() {
        margin-top: 16px;
      }
    }

    @include activity-media-preview();

    $body_height: 24*3;
    div.activity-card-body {
      margin-top: 12px;
      @include activity-body(16);
      @include avenir_M();
      color: $deep_navy;
      line-height: 24px;
      display: block;
      max-height: #{$body_height}px;
      overflow: hidden;

      & > *:not(:last-child) {
        margin: 24px 0px;
      }

      & > *:last-child {
        margin: 24px 0px 0px;
      }

      & > *:first-child {
        margin-top: 0px;
      }

      &.has-body {
        height: #{$body_height}px;
      }

      &.has-media-preview {
        width: calc(100% - 72px - 16px);
        margin-right: 16px;
        float: left;
      }

      .carrot-no-preview {
        display: none;
      }

      a:not(.read-more):hover {
        text-decoration: none !important;
      }

      img:not(.emojione){
        display: none;
      }

      h2 {
        @include avenir_R();
        font-size: 16px;
        font-weight: normal;
      }

      b, strong {
        font-weight: normal;
        @include avenir_R();
      }

      // // Uncomment this to programmatically add the read full update at the end of the last body tag
      // div:last-child, p:last-child {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //     margin-left: 5px;
      //   }
      // }

      // &:empty {
      //   &:after {
      //     content: "Read Full Update";
      //     @include activity-body;
      //     color: $carrot_text_blue;
      //     cursor: pointer;
      //   }
      // }
    }
  }

  div.activity-card-attachments {
    margin-top: 16px;
    height: 26px;

    div.activity-attachments {
      width: 100%;
    }
  }

  div.activity-card-footer {
    width: 100%;
    padding: 16px 32px 32px;
    min-height: 82px;
    border-bottom-left-radius: 6px;
    border-bottom-right-radius: 6px;

    @include mobile() {
      padding: 24px 32px 32px;
    }

    div.activity-card-footer-divider-line {
      width: 100%;
      height: 1px;
      background-color: #ECECEC;
      margin-bottom: 16px;

      @include mobile() {
        display: none;
      }
    }

    div.reactions {
      float: left;

      @include mobile() {
        float: unset;
      }
    }

    div.is-comments {
      float: left;
      margin-left: 16px;

      @include mobile() {
        float: unset;
      }
    }

    div.activity-share {
      float: right;
      position: relative;
      margin-right: 8px;
      margin-top: 4px;

      button.activity-share-bt {
        width: 24px;
        height: 24px;
        background-image: cdnUrl("/img/ML/foc_share_icon.svg");
        background-repeat: no-repeat;
        background-position: center;
        background-size: 24px 24px;
        padding: 0;
        margin: 0px;
        opacity: 0;
      }

      div.activity-share-dropdown {
        position: absolute;
        bottom: 42px;
        right: -10px;
        left: calc(100% - 100px + 10px);
        min-width: 100px;
        height: auto;
        border: none;
        outline: none;
        box-shadow: none;
        background-color: transparent;
        overflow: visible;
        z-index: 100;

        div.triangle {
          position: absolute;
          bottom: -7px;
          left: calc(100% - 30px);
          background-color: white;
          border-top: 1px solid rgba(177,184,192,0.50);
          border-left: 1px solid rgba(177,184,192,0.50);
          transform: rotate(225deg);
          width: 15px;
          height: 15px;
        }

        ul.activity-share-dropdown-list {
          background-color: white;
          border: 1px solid rgba(177,184,192,0.50);
          box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.1);;
          border-radius: 5px;
          margin: 0px;
          padding: 10px 13px 6px 8px;
          min-height: 50px;
          list-style-type: none;
          width: 100%;

          li.activity-share-dropdown-item {
            padding: 3px 8px;
            @include avenir_M();
            font-size: 14px;
            color: $carrot_light_gray_3;
            cursor: pointer;
            background-color: transparent;

            @include big_web() {
              &:hover {
                background-color: rgba($carrot_light_gray_4, 0.2);
              }
            }
          }
        }
      }
    }

    button.post-edit {
      float: right;
      margin-right: -6px;
      margin-top: 4px;
      width: 24px;
      height: 24px;
      background-image: cdnUrl("/img/ML/post_edit_pencil.svg");
      background-position: center;
      background-size: 14px 14px;
      background-repeat: no-repeat;
      opacity: 0;

      @include mobile() {
        opacity: 1;
      }

      @include big_web() {
        &:hover {
          opacity: 1;
        }
      }
    }
  }
}
/* linkAnimation for card and modal links */
@include keyframe(linkAnimation){
  0% {
    background-position: right bottom;
    background-size: 100% .1rem;
  }

  50% {
    background-position: right bottom;
    background-size: 0 .1rem;
  }

  51% {
    background-position: left bottom;
    background-size: 0 .1rem;
  }

  100% {
    background-position: left bottom;
    background-size: 100% .1rem;
  }
}

